# xdelta

./: .travis.yml  azure-pipelines.yml
xdelta3/: CMakeLists.txt  README.md  build_android  build_native  build_windows  cmake-config.h.in  windowsconfig.ps1  xdelta.native.targets  xdelta.nuspec  xdelta3.vcxproj
